--- a/.github/workflows/deploy_to_s3.yml
+++ b/.github/workflows/deploy_to_s3.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: 19.6.0 # Asegúrate de seleccionar la versión correcta de Node.js para tu proyecto
+        node-version: 19
 - name: Install dependencies
       run: npm ci
 
