--- a/.github/workflows/deploy_to_s3.yml
+++ b/.github/workflows/deploy_to_s3.yml
@@ -6,31 +6,30 @@ on:
       - main 
 
 jobs:
-  build_and_deploy:
+  CypressTestReport:
+    timeout-minutes: 120
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: 19
-- name: Install dependencies
-      run: npm ci
-
-    - name: Build Angular app
-      run: ng build --prod
-
-    - name: Install AWS CLI
-      run: |
-        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-        unzip awscliv2.zip
-        sudo ./aws/install
- - name: Deploy to Amazon S3
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: |
-        aws s3 sync dist/ s3://saludfinanciera --delete --acl public-read
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: cypress-Test-report
+        uses: cypress-io/github-action@v2
+        with:
+          command: npm run testing
+          browser: chrome
+          headless: true
+      - name: Upload Report
+        uses: actions/upload-artifact@v2
+        with:
+          name: HTML_Report
+          path: cypress/reports/Result
+      - name: Upload S3    
+        uses: shallwefootball/s3-upload-action@master
+        id: S3
+        with:
+          aws_key_id: ${{secrets.AWS_KEY_ID}}
+          aws_secret_access_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          aws_bucket: saludfinanciera
+          source_dir: cypress/reports/Result   
+      - name: Link To Report
+        run: echo "https://s3.amazonaws.com/saludfinanciera/${{steps.S3.outputs.object_key}}/index.html"
