--- a/.github/workflows/deploy_to_s3.yml
+++ b/.github/workflows/deploy_to_s3.yml
@@ -6,30 +6,19 @@ on:
       - main 
 
 jobs:
-  CypressTestReport:
-    timeout-minutes: 120
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    # https://github.com/marketplace/actions/s3-sync 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: cypress-Test-report
-        uses: cypress-io/github-action@v2
+      - uses: actions/checkout@master
+      - uses: jota/s3-sync-action@master
         with:
-          command: npm run testing
-          browser: chrome
-          headless: true
-      - name: Upload Report
-        uses: actions/upload-artifact@v2
-        with:
-          name: HTML_Report
-          path: cypress/reports/Result
-      - name: Upload S3    
-        uses: shallwefootball/s3-upload-action@master
-        id: S3
-        with:
-          aws_key_id: ${{secrets.AWS_KEY_ID}}
-          aws_secret_access_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          aws_bucket: saludfinanciera
-          source_dir: cypress/reports/Result   
-      - name: Link To Report
-        run: echo "https://s3.amazonaws.com/saludfinanciera/${{steps.S3.outputs.object_key}}/index.html"
+          args: --acl public-read --follow-symlinks --delete --exclude '.git/*' --exclude '.github/*'
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          SOURCE_DIR: './public'
