--- a/.github/workflows/deploy_to_s3.yml
+++ b/.github/workflows/deploy_to_s3.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     # https://github.com/marketplace/actions/s3-sync 
     steps:
-      - uses: actions/checkout@master
-      - uses: jotarodriguezdiaz/saludfinanciera-web@master
+      - name: Checkout repository
+        uses: actions/checkout@v2
         with:
           args: --acl public-read --follow-symlinks --delete --exclude '.git/*' --exclude '.github/*'
         env:
