--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^15.2.7",
     "@angular/platform-browser-dynamic": "^15.2.7",
     "@angular/router": "^15.2.7",
+    "@auth0/angular-jwt": "^5.1.2",
     "@coreui/angular": "~4.4.1",
     "@coreui/angular-chartjs": "~4.4.1",
     "@coreui/chartjs": "^3.1.1",
