ci: modificación de bucket S3

--- a/.github/workflows/deploy_to_s3.yml
+++ b/.github/workflows/deploy_to_s3.yml
@@ -26,4 +26,4 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
     - name: Sync build folder with S3 bucket
-      run: aws s3 sync dist/coreui-free-angular-admin-template/ s3://saludfinanciera --delete
+      run: aws s3 sync dist/coreui-free-angular-admin-template/ s3://saludfinanciera.es --delete
