--- a/.github/workflows/deploy_to_s3.yml
+++ b/.github/workflows/deploy_to_s3.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: npm install
     - name: Build Angular app
-      run: npm run build -- --prod
+      run: npm run build --prod
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
