--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "chart.js": "^3.9.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.29",
     "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -48,7 +50,9 @@
     "@angular/cli": "^15.2.6",
     "@angular/compiler-cli": "^15.2.7",
     "@angular/localize": "^15.2.7",
+    "@types/html2canvas": "^1.0.0",
     "@types/jasmine": "^4.3.1",
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^18.15.11",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.1",
