--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "npm run ng build",
+    "build-docker": "ng build --configuration=docker",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
